[package]
name = "animeroba"
version = "0.1.0"
authors = ["Emilio González <emigr2k1@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.9.0"
num-traits = "0.2"
num-derive = "0.3"
diesel = { version = "1.4.3", features = ["extras", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
actix-web = "=2.0.0-alpha.3"
actix-files = "=0.2.0-alpha.3"
actix-service = "=1.0.0-alpha.3"
actix-http = "=1.0.0-alpha.3"
tera = "1.0.0-beta.21"
fern = { version = "0.5.9", features = ["colored"] }
log = "0.4.8"
colored = "1.9.0"
