[package]
name = "animeroba"
version = "0.1.0"
authors = ["Emilio González <emigr2k1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0.41"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["extras"] }
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["tera_templates", "diesel_postgres_pool", "mongodb_pool"]

[dependencies.serde]
version = "1.0.101"
features = ["derive"]
